gccida/g1/next_tokenrun
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpplex.c:1227:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 * next_tokenrun( tokenrun_0 *run) 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpplex.c:1227:29: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 * next_tokenrun( tokenrun_0 *run) 
                            ^~~~~~~~~~
                            tokenrun
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpplex.c:1229:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *v2; // rax 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpplex.c:1233:20: error: expected expression
v2 = ( tokenrun_0 *)xmalloc( 0x20uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/cpplex.c:1233:8: error: use of undeclared identifier 'tokenrun_0'
v2 = ( tokenrun_0 *)xmalloc( 0x20uLL); 
       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/next_tokenrun/src/obj/cpplex.o] Error 1
